fixed font size issues on mobile

--- a/app/assets/stylesheets/listing.css.scss
+++ b/app/assets/stylesheets/listing.css.scss
@@ -76,9 +76,15 @@ textarea {
           width: 80%;
           @include media($mobile) {
             padding: 0;
+            margin: 0;
             @include span-columns(4);
-            h1 { font-size: 16px;}
-            .more { a { font-size: 12px; } }
+            h1 { font-size: 6px; }
+            .more {
+              width: 100%;
+              margin-top: 0;
+              padding: 0;
+              a { font-size: 4px; }
+            }
           }
           h1 {
             opacity: 0;
@@ -114,10 +120,6 @@ textarea {
             -webkit-transition: all 0.25s ease-in-out;
             -o-transition: all 0.25s ease-in-out;
             &:hover { background-color: transparent; border: 2px solid white; }
-          }
-          p.body, p.intro {
-            color: black;
-            font-size: 1em;
           }
         }
         &:hover {
